examples/fail/parser/bad_function_decl.bina
// EXPECT_PARSER_ERROR: expected parameter name
fn main( -> int {
    return 0;
}
